--- a/300Plan/_077LC743.md
+++ b/300Plan/_077LC743.md
@@ -41,7 +41,8 @@ class Solution {
             // 处理当前层每个节点的下一层
             if (map.containsKey(currNode)) { // 防止null
                 for (int neighbor : map.get(currNode).keySet()) { // 获取当前节点的所有目标节点
-                    pq.offer(new int[]{neighbor, currDelay + map.get(currNode).get(neighbor)}); // 源节点到当前层delay time + 当前层到目标节点的delay time
+                    // 源节点到当前层delay time + 当前层到目标节点的delay time
+                    pq.offer(new int[]{neighbor, currDelay + map.get(currNode).get(neighbor)}); 
                 }
             } 
             
