--- a/300Plan/_083LC239.md
+++ b/300Plan/_083LC239.md
@@ -15,7 +15,7 @@ class Solution {
         int index = 0;
         
         for (int i = 0; i <= len - 1; i++) {
-            if (!window.isEmpty() && window.peek() < i - k + 1) { //队列头顶元素的index在过了做窗口后需要删除
+            if (!window.isEmpty() && window.peek() < i - k + 1) { //队列头顶元素的index在过了左窗口后需要删除
                 window.poll();
             }
             while (!window.isEmpty() && nums[window.peekLast()] <= nums[i]) { //队列中比新进来元素小的元素用不到
