--- a/Ning Solutions/Frequency/1TO50/1TO5.md
+++ b/Ning Solutions/Frequency/1TO50/1TO5.md
@@ -87,6 +87,129 @@ class Solution {
         return r >= 0 && r < grid.length && c >= 0 && c < grid[0].length;
     }
 }
+//BFS
+public class Solution {
+    private int rows;
+    private int cols;
+
+    public int numIslands(char[][] grid) {
+        //           x-1,y
+        //  x,y-1    x,y      x,y+1
+        //           x+1,y
+        int[][] directions = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};
+        rows = grid.length;
+        if (rows == 0) {
+            return 0;
+        }
+        cols = grid[0].length;
+        boolean[][] marked = new boolean[rows][cols];
+        int count = 0;
+        for (int i = 0; i < rows; i++) {
+            for (int j = 0; j < cols; j++) {
+                // 如果是岛屿中的一个点，并且没有被访问过
+                // 从坐标为 (i,j) 的点开始进行广度优先遍历
+                if (!marked[i][j] && grid[i][j] == '1') {
+                    count++;
+                    LinkedList<Integer> queue = new LinkedList<>();
+                    // 小技巧：把坐标转换为一个数字
+                    // 否则，得用一个数组存，在 Python 中，可以使用 tuple 存
+                    queue.addLast(i * cols + j); // 队列放的是坐标
+                    // 注意：这里要标记上已经访问过 不能出队标记
+                    marked[i][j] = true;
+                    while (!queue.isEmpty()) {
+                        int cur = queue.removeFirst();
+                        int curX = cur / cols;
+                        int curY = cur % cols;
+                        // 得到 4 个方向的坐标
+                        for (int k = 0; k < 4; k++) {
+                            int newX = curX + directions[k][0];
+                            int newY = curY + directions[k][1];
+                            // 如果不越界、没有被访问过、并且还要是陆地，我就继续放入队列，放入队列的同时，要记得标记已经访问过
+                            if (inArea(newX, newY) && grid[newX][newY] == '1' && !marked[newX][newY]) {
+                                queue.addLast(newX * cols + newY);
+                                // 【特别注意】在放入队列以后，要马上标记成已经访问过，语义也是十分清楚的：反正只要进入了队列，你迟早都会遍历到它
+                                // 而不是在出队列的时候再标记
+                                // 【特别注意】如果是出队列的时候再标记，会造成很多重复的结点进入队列，造成重复的操作，这句话如果你没有写对地方，代码会严重超时的
+                                marked[newX][newY] = true;
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
+        return count;
+    }
+
+    private boolean inArea(int x, int y) {
+        // 等于号这些细节不要忘了
+        return x >= 0 && x < rows && y >= 0 && y < cols;
+    }
+}
+// union find
+class Solution {
+    public int numIslands(char[][] grid) {
+        if (grid == null || grid.length == 0 ){
+            return 0;
+        }
+        int m = grid.length;
+        int n = grid[0].length;
+        UnionFind uf = new UnionFind(grid);
+        for (int i = 0; i< m; i++){
+            for(int j = 0; j< n; j++){
+                if (grid[i][j] == '1') {
+                    //二维矩阵m*n,z在一维数组的位置是：（第几行×矩阵宽度）+ 在第几列
+                    //前面已经执行过，不用往回查
+                    if (i + 1 < m && grid[i+1][j] == '1') {
+                        uf.union(i * n + j, (i+1) * n + j);
+                    }
+                    if (j + 1 < n && grid[i][j+1] == '1') {
+                        uf.union(i * n + j, i * n + j + 1);
+                    }
+                }
+            }
+        }
+        return uf.count;
+    }
+
+    class UnionFind{
+        int[] parent;
+        int count;
+// 初始化
+        public UnionFind(char[][] grid) {
+            int m = grid.length;
+            int n = grid[0].length;
+            parent = new int[m * n];
+            for (int i = 0; i < m; ++i) {
+                for (int j = 0; j < n; ++j) {
+                    if (grid[i][j] == '1') {
+                        //二维变一维
+                        parent[i * n + j] = i * n + j;
+                        count++;
+                    }
+                }
+            }
+        }
+
+        public int find(int p){
+            while(p!= parent[p]){
+                //压缩路径，optional
+                parent[p] = parent[parent[p]];
+                p = parent[p];
+            }
+            return p;
+        }
+        public void union(int p, int q){
+            int rootP = find(p);
+            int rootQ = find(q);
+            if (rootP == rootQ) return;
+            parent[rootP] = rootQ;
+            count--;
+        }
+    }
+}
+
+
 // 42. Trapping Rain Water
 class Solution {
     public int trap(int[] height) {
@@ -105,7 +228,6 @@ class Solution {
                sum += rightMax - height[right];
                right --;
            }
-            
         }
         return sum;
     }
