--- a/Ning Solutions/Interview/FaceBook/1To10.md
+++ b/Ning Solutions/Interview/FaceBook/1To10.md
@@ -17,7 +17,7 @@ class Solution {
         int n = s1.length(), m = s2.length();
         for (int i = 0; i < n && i < m; ++i)
             if (s1.charAt(i) != s2.charAt(i))
-                return mapping[s1.charAt(i) - 'a'] > mapping[s2.charAt(i) - 'a'];
+          return mapping[s1.charAt(i) - 'a'] > mapping[s2.charAt(i) - 'a'];
         return n > m;
     }
 }
@@ -61,7 +61,9 @@ class Solution {
         return ans;
     }
     boolean existOneInColumn(BinaryMatrix binaryMatrix, int m, int c) {
-        for (int r = 0; r < m; r++) if (binaryMatrix.get(r, c) == 1) return true;
+        for (int r = 0; r < m; r++) 
+        if (binaryMatrix.get(r, c) == 1) 
+            return true;
         return false;
     }
 }
@@ -76,7 +78,8 @@ class Solution {
         for (int i = 0; i < nums.length; i ++) {
             sum += nums[i];
             if (map.containsKey(sum - k)){
-                res += map.get(sum - k); // may be has more than one presum equals same number.
+                res += map.get(sum - k); 
+         // may be has more than one presum equals same number.
             }
             map.put(sum, map.getOrDefault(sum, 0) + 1);
         }
@@ -91,7 +94,8 @@ class Solution {
         int left = 0; int right = s.length() - 1;
         while (left < right) {
             if (s.charAt(left) != s.charAt(right)){
-                return extendPalindrome(s,left + 1, right) || extendPalindrome(s,left, right - 1);
+                return extendPalindrome(s,left + 1, right) || 
+                 extendPalindrome(s,left, right - 1);
             }
             left ++;
             right--;
@@ -113,7 +117,8 @@ class Solution {
 // 973. K Closest Points to Origin
 class Solution {
     public int[][] kClosest(int[][] points, int K) {
-    PriorityQueue<int[]> pq = new PriorityQueue<int[]>((p1,p2) -> p2[0] * p2[0] + p2[1] * p2[1] - p1[0] * p1[0] - p1[1] * p1[1]);
+    PriorityQueue<int[]> pq = new PriorityQueue<int[]>((p1,p2) -> 
+p2[0] * p2[0] + p2[1] * p2[1] - p1[0] * p1[0] - p1[1] * p1[1]);
    // P2 - P1, int[[]
     for (int i = 0; i < points.length; i ++){
         pq.offer(points[i]);
@@ -134,7 +139,8 @@ class Solution {
 class Solution {
     public int[] productExceptSelf(int[] nums) {
         int n = nums.length;
-        int[] front = new int[n]; int[] back = new int[n]; int[] res = new int[n];
+        int[] front = new int[n]; int[] back = new int[n]; 
+        int[] res = new int[n];
         front[0] = 1;
         back[n - 1] = 1;
         for (int i = 1; i < n; i ++) {
@@ -160,8 +166,11 @@ class Solution{
     }
     
     public String helper(int num) {
-        String[] words = new String[] {"", "One", "Two", "Three", "Four", "Five", "Six", "Seven", "Eight", "Nine",
-        "Ten", "Eleven", "Twelve", "Thirteen", "Fourteen", "Fifteen", "Sixteen", "Seventeen", "Eighteen", "Nineteen", "Twenty", "Thirty", "Forty", "Fifty", "Sixty", "Seventy", "Eighty", "Ninety"};
+        String[] words = new String[] {"", "One", "Two", "Three", "Four", 
+   "Five", "Six", "Seven", "Eight", "Nine", "Ten", "Eleven", "Twelve", 
+"Thirteen", "Fourteen", "Fifteen", "Sixteen", "Seventeen", "Eighteen", 
+"Nineteen", "Twenty", "Thirty", "Forty", "Fifty", "Sixty", "Seventy", 
+ "Eighty", "Ninety"};
         
         StringBuilder res = new StringBuilder();
         
@@ -181,7 +190,8 @@ class Solution{
             res.append(helper(num/100)).append(" Hundred ");
             num %= 100;
         }
-        if(num>=20) res.append(words[(num-20)/10+20]).append(" ").append(words[num%10]);
+        if(num>=20) 
+             res.append(words[(num-20)/10+20]).append(" ").append(words[num%10]);
         else res.append(words[num]);
         
         return res.toString().trim();
@@ -189,27 +199,23 @@ class Solution{
 }
 
 // 415. Add Strings
-public class Solution {
+class Solution {
     public String addStrings(String num1, String num2) {
-        if(num1 == null || num2 == null) return null;
-        StringBuilder sb = new StringBuilder();
-        int carry = 0;
-        int l1 = num1.length()-1;
-        int l2 = num2.length()-1;
-        
-        while(l1>=0 || l2>=0){
-            int n1 = l1>=0 ? num1.charAt(l1)-'0' : 0;
-            int n2 = l2>=0 ? num2.charAt(l2)-'0' : 0;
-            int sum = n1 + n2 + carry;
-            carry = sum > 9 ? 1 : 0;
-            sb.insert(0, sum%10);
-            l1--;
-            l2--;
-        }    
-        if(carry == 1) sb.insert(0, 1);
-        return sb.toString();
+        StringBuilder res = new StringBuilder("");
+        int i = num1.length() - 1, j = num2.length() - 1, carry = 0;
+        while(i >= 0 || j >= 0){
+            int n1 = i >= 0 ? num1.charAt(i) - '0' : 0; //因为有可能一长一短的情况
+            int n2 = j >= 0 ? num2.charAt(j) - '0' : 0;
+            int tmp = n1 + n2 + carry;
+            carry = tmp / 10;
+            res.append(tmp % 10);
+            i--; j--;
+        }
+        if(carry == 1) res.append(1);
+        return res.reverse().toString();
     }
 }
+
 // 67. Add Binary
 class Solution {
     public String addBinary(String a, String b) {
