--- a/Ning Solutions/Interview/FaceBook/21To30.md
+++ b/Ning Solutions/Interview/FaceBook/21To30.md
@@ -220,9 +220,12 @@ class Solution {
         int left = 0;
         int right = s.length() - 1;
         while (left < right) {
-       while(left < right && !Character.isLetterOrDigit(s.charAt(left))) left ++;
-       while(left < right && ! Character.isLetterOrDigit(s.charAt(right))) right --;
-       if(Character.toLowerCase(s.charAt(left)) != Character.toLowerCase(s.charAt(right)))
+       while(left < right && !Character.isLetterOrDigit(s.charAt(left))) 
+          left ++;
+       while(left < right && ! Character.isLetterOrDigit(s.charAt(right))) 
+          right --;
+       if(Character.toLowerCase(s.charAt(left)) 
+                              != Character.toLowerCase(s.charAt(right)))
         return false;
             left ++;
             right--;
