--- a/Ning Solutions/Interview/FaceBook/1To10.md
+++ b/Ning Solutions/Interview/FaceBook/1To10.md
@@ -79,7 +79,7 @@ class Solution {
             sum += nums[i];
             if (map.containsKey(sum - k)){
                 res += map.get(sum - k); 
-         // may be has more than one presum equals same number.
+             // may be has more than one presum equals same number.
             }
             map.put(sum, map.getOrDefault(sum, 0) + 1);
         }
@@ -159,45 +159,41 @@ class Solution {
 }
 
 // 273. Integer to English Words
-class Solution{
+class Solution {
     public String numberToWords(int num) {
-        if(num==0)  return "Zero";
-        return helper(num);
+        if(num == 0) return "Zero";
+        return helper(num);  
     }
-    
-    public String helper(int num) {
-        String[] words = new String[] {"", "One", "Two", "Three", "Four", 
-   "Five", "Six", "Seven", "Eight", "Nine", "Ten", "Eleven", "Twelve", 
-"Thirteen", "Fourteen", "Fifteen", "Sixteen", "Seventeen", "Eighteen", 
-"Nineteen", "Twenty", "Thirty", "Forty", "Fifty", "Sixty", "Seventy", 
- "Eighty", "Ninety"};
-        
-        StringBuilder res = new StringBuilder();
-        
-        if(num>=1000000000) {
-            res.append(helper(num/1000000000)).append(" Billion ");
-            num %= 1000000000;
+    public String helper(int num ) {
+        String[] words = new String[] {"", "One", "Two", "Three", "Four", "Five", "Six", "Seven", "Eight", "Nine", "Ten",
+                                      "Eleven", "Twelve", "Thirteen", "Fourteen", "Fifteen", "Sixteen", "Seventeen",
+                                       "Eighteen", "Nineteen"}; // Fifteen, Twelve Forty Nineteen Ninety Hundred
+        String[] words1 = new String[]{"","","Twenty ", "Thirty ", "Forty ", "Fifty ", "Sixty ",  "Seventy ", "Eighty ", "Ninety "};
+       StringBuilder sb = new StringBuilder();
+        if (num >= 1000000000) {
+            sb.append(helper(num/1000000000)).append(" Billion ");
+            num %= 1000000000; 
         }
-        if(num>=1000000) {
-            res.append(helper(num/1000000)).append(" Million ");
-            num%=1000000;
+        if (num >= 1000000) {
+            sb.append(helper(num/1000000)).append(" Million ");
+            num %= 1000000; 
         }
-        if(num>=1000) {
-            res.append(helper(num/1000)).append(" Thousand ");
-            num%=1000;
+        if (num >= 1000) {
+            sb.append(helper(num/1000)).append(" Thousand ");
+            num %= 1000; 
         }
-        if(num>=100) {
-            res.append(helper(num/100)).append(" Hundred ");
-            num %= 100;
+        if (num >= 100) {
+            sb.append(helper(num/100)).append(" Hundred ");
+            num %= 100; 
         }
-        if(num>=20) 
-             res.append(words[(num-20)/10+20]).append(" ").append(words[num%10]);
-        else res.append(words[num]);
-        
-        return res.toString().trim();
+        if (num >= 20) {
+             sb.append(words1[num/10]).append(words[num%10]);
+        } else {
+          sb.append(words[num]);  
+        }
+        return sb.toString().trim();
     }
 }
-
 // 415. Add Strings
 class Solution {
     public String addStrings(String num1, String num2) {
@@ -215,21 +211,21 @@ class Solution {
         return res.reverse().toString();
     }
 }
-
 // 67. Add Binary
 class Solution {
     public String addBinary(String a, String b) {
-        StringBuilder ans = new StringBuilder();
-        int ca = 0;
-        for(int i = a.length() - 1, j = b.length() - 1;i >= 0 || j >= 0; i--, j--) {
-            int sum = ca;
-            sum += i >= 0 ? a.charAt(i) - '0' : 0;
-            sum += j >= 0 ? b.charAt(j) - '0' : 0;
-            ans.append(sum % 2);
-            ca = sum / 2;
+        StringBuilder sb = new StringBuilder();
+        int i = a.length() - 1; int j = b.length() - 1; int carry = 0;
+        while (i >= 0  || j >= 0) {
+            int m = i >= 0 ? a.charAt(i) - '0' : 0;
+            int n = j >= 0 ? b.charAt(j) - '0' : 0;
+            int sum = m + n + carry;
+            carry = sum / 2;
+            sb.append(sum % 2);
+            i --; j --;
         }
-        ans.append(ca == 1 ? ca : "");
-        return ans.reverse().toString();
+        if (carry > 0) sb.append(carry);
+        return sb.reverse().toString();
     }
 }
 
