--- a/Ning Solutions/Interview/FaceBook/21To30.md
+++ b/Ning Solutions/Interview/FaceBook/21To30.md
@@ -267,5 +267,24 @@ class Solution {
         }
     }
 }
+// 295. Find Median from Data Stream
+class MedianFinder {
+   private Queue<Integer> small = new PriorityQueue<>((o1,o2) -> (o2 - o1)); // need <>
+   private Queue<Integer> large = new PriorityQueue();
+    // Adds a number into the data structure.
+    public void addNum(int num) {
+        large.add(num);
+        small.add(large.poll());
+        if (large.size() < small.size())
+            large.add(small.poll());
+    }
+
+    // Returns the median of current data stream
+    public double findMedian() {
+        return large.size() > small.size()
+               ? large.peek()
+               : (large.peek() + small.peek()) / 2.0;
+    }
+}
 
 ```
