--- a/系统设计笔记.md
+++ b/系统设计笔记.md
@@ -44,6 +44,78 @@ Hot Warm Architecture的不足
 * 用户查询冷数据速度依旧很慢，如果查询冷数据的用户比例很低，比如只有 1%，那么这个方案就没问题
 * 业务无法再修改冷数据，因为冷数据多到一定程度时，系统承受不住。（这点可以通过冷库再分库来解决）
 
+## 1.2 查询分离 Query Splitting
+前面的冷热分离在查询冷数据时依然会很慢，并且在数据更大的时候也可能很慢，这时候可以考虑查询分离（注意和读写分离Read/Write Splitting）
+
+场景： SaaS 客服系统的架构优化，系统里有一个工单查询功能，工单表中存放了几千万条数据，且查询工单表数据时需要关联十几个子表，每个子表的数据也是超亿条。面对如此庞大的数据量，跟前面的冷热分离一样，每次客户查询数据时几十秒才能返回结果，即便使用了索引、SQL 等数据库优化技巧，效果依然不明显。加上工单表中有些数据是几年前的，客户说这些数据涉及诉讼问题，需要继续保持更新，因此无法将这些旧数据封存到别的地方，也就没法通过前面的冷热分离方案来解决。
+
+采用查询分离的解决方案，得以将这个问题顺利解决：*** 将更新的数据放在一个数据库里，而查询的数据放在另外一个系统里 ***。因为数据的更新都是单表更新，不需要关联也没有外键，所以更新速度立马得到提升，数据的查询则通过一个专门处理大数据量的查询引擎来解决，也快速地满足了客户的需求。通过这种解决方案处理后，每次客户查询数据时，500ms 内就可得到返回结果，客户再也不抱怨了。
+
+### 何谓查询分离
+即每次写数据时保存一份数据到额外的存储系统里（双写），用户查询数据时直接从另外的存储系统（大数据查询引擎）里获取数据
+
+### 何种场景下使用查询分离
+* 数据量大；
+* 所有写数据的请求效率尚可；
+* 查询数据的请求效率很低；
+* 所有的数据任何时候都可能被修改；
+* 业务希望我们优化查询数据的功能。
+
+### 查询分离实现思路
+（一）如何触发查询分离？
+* 修改业务代码：在写入常规数据后，同步建立查询数据 - 优点：保证查询业务的实时性和一致性，业务逻辑灵活；缺点：侵入业务代码，减缓写操作速度
+* 修改业务代码：在写入常规数据后，异步建立查询数据 - 优点： 不影响主流程； 缺点：查询一致性问题，用户可能查到过时的数据
+* 监控数据库日志binlog：如有数据变更，更新查询数据 - 优点： 不影响主流程，没有业务代码的侵入；缺点：用户可能会查到过时数据，架构较复杂
+
+> 什么叫减缓写操作速度？ 建立查询数据的一个动作能减缓多少写操作速度？答案：很多。举个例子：当你只是简单更新了订单的一个标识，本来查询数据时间只需要 2ms，而在查询数据时可能会涉及重建（比如使用 ES 查询数据时会涉及索引、分片、主从备份，其中每个动作又细分为很多子动作，这些内容后面我们会讲到），这时建立查询数据的过程可能就需要 1s 了
+
+触发三种查询分离的适用场景
+
+![触发三种查询分离的适用场景](/imgs/systemDesign/querySplitting0.png)
+
+（二）如何实现查询分离？
+这里主要是第二种触发方式：修改业务代码异步建立查询数据， 最基本的实现方式是单独起一个线程建立查询数据，不过这种做法会出现如下情况：
+
+* 写操作较多且线程太多，最终撑爆 JVM；
+* 建查询数据的线程出错了，如何自动重试；
+* 多线程并发时，很多并发场景需要解决。
+
+使用 MQ 管理这些线程即可解决上面问题，MQ 的具体操作思路为每次主数据写操作请求处理时，都会发一个通知给 MQ，MQ 收到通知后唤醒一个线程更新查询数据
+
+![触发三种查询分离的适用场景](/imgs/systemDesign/querySplitting1.png)
+
+考虑一下问题：
+* MQ如何选型
+* MQ宕机了怎么办？ - NeedUpdateQueryData=true
+* 更新查询数据的线程失败了怎么办 - NeedUpdateQueryData 标识
+* 消息的幂等消费
+* 消息的时序性问题 - last_update_time and NeedUpdateQueryData
+
+（三）查询数据如何存储？
+* Elasticsearch 
+* MongoDB、HBase 等
+
+（四）查询数据如何使用？
+* 直接调用 ES 的 API 就行
+* 数据查询更新完前，查询数据不一致怎么办？
+    * 在查询数据更新到最新前，不允许用户查询
+    * 给用户提示：您目前查询到的数据可能是 1 秒前的数据，如果发现数据不准确，可以尝试刷新一下，这种提示用户一般比较容易接受。
+
+### 查询分离整体方案
+
+![触发三种查询分离的适用场景](/imgs/systemDesign/querySplitting2.png)
+
+### 历史数据迁移
+* NeedUpdateQueryData=true
+
+### Query Splitting的缺点
+* 使用 Elasticsearch 存储查询数据时，注意事项是什么（此方案并未详细展开）？
+* 主数据量越来越大后，写操作还是慢，到时还是会出问题。
+* 主数据和查询数据不一致时，假设业务逻辑需要查询数据保持一致性呢？
+
+## 1.3 Elasticserach做查询数据的存储系统的要点
+
+
 # 2. 缓存层场景
 
 
