--- a/系统设计笔记.md
+++ b/系统设计笔记.md
@@ -1,4 +1,11 @@
-# 1. 数据持久化层场景
+# 0. 系统设计面试链接
+[系统设计面试题精选](https://soulmachine.gitbooks.io/system-design/content/cn/)
+[System Design Interview](https://systeminterview.com/)
+[]()
+[]()
+[]()
+[]()
+
 ## 1.1 冷热分离 Hot Warm (Hot Cold) Architecture
 场景：供应链有个订单功能，里面的主表有几千万的数据量，加上关联表，数据量达到上亿，这么庞大的数据量，让平台的订单查询非常缓慢（查询一次需要二三十秒），多点几次还会出现宕机。比如业务员多次查询时，数据库的CPU会立即狂飙，服务器的线程数也降不下来。
 
